# Agentic_pdf_parsing

./: .env.example  README.md  _dev_roadmap_mini_agentic.md  pdf_parsing.desktop  pyproject.toml  run.py  start_project.sh
configurations/: agentic_parsing.yaml  rag_prep.yaml  text_extraction.yaml
report/: 2026-03-31_13-58-36_response_aggregated.json  2026-04-10_11-59-06_report_llm.md  2026-04-10_11-59-06_response_aggregate.json
src/: run_agent.py  run_agent_orchest.py  run_parse_agent.py  run_rag_prep.py  run_rag_prep_v2.py  run_text_extraction.py
src/agent/: aggregation.py  aggregation_determ.py  aggregation_llm.py  decision.py  decision_determ.py  decision_llm.py  extraction.py  orchestrator.py  prompts.py  report_llm.py
src/core/: logger.py  memory.py  session.py  text_cleaner.py  text_preprocessor.py
src/schema/: aggregation_schema.py  decision_schema.py  extraction_schema.py  q&a_schema.py  text_schema.py
src/tools/: cleaning.py  extraction.py  retrieve.py  text_extraction.py  text_q&a.py  tools.py
src/utils/: df_helper.py  extract_pdf_helper.py  file_helper.py  general_helper.py  llm_helper.py  path_helper.py  spacy_helper.py
