[project]
name = "agentic-pdf-parsing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "numpy>=2.0.2",
    "openai>=2.23.0",
    "pandas>=3.0.2",
    "pdfplumber>=0.11.9",
    "pyarrow>=23.0.1",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "spacy>=3.8.14",
    "tiktoken>=0.12.0",
    "wordfreq>=3.1.1",
]
